@@ -22,3 +22,4 @@ protected/runtime/gii-1.1.13/ModelCode.php -- I think this is a file that should
 protected/models/User.php -- File generated by Gii. Goto this url 'http://localhost/Yii-Tutorial/index.php?r=gii/model' to generate this. The password is 'password', fill in 'user' for Table name, click preview, then generate.
 protected/test/unit/user_model.php -- Added tests to ensure the model checks for password matching. Also added tests to ensure clear text passwords are not stored in the database, and removed from memory after they are saved
 protected/test/unit/user_model.php -- Added tests to ensure the hashed password matches the original password when compared
+protected/test/unit/user_model.php -- Refactored and corrected errors in the test.
